Created a title and worked on hover event

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Etch-a-Sketch Program</h1>
+    
     <div class = 'container'>
         
     </div>
