--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Etch-a-Sketch Program</h1>
+
+    <button id="sizeOfGrid" onclick="gridResizePrompt()">Click here to change the size of the grid</button>
     
     <div class = 'container'>
         
