--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <h1>Etch-a-Sketch Program</h1>
 
-    <button id="sizeOfGrid" onclick="gridResizePrompt()">Click here to change the size of the grid</button>
+    <div id = "buttonMenu">
+        <button id="sizeOfGrid" onclick="gridResizePrompt()">Click Here to Change the Size of the Grid</button>
+
+        <button id="randomizeColorMode" onclick="randomColorMode()">Random Color Mode</button>
+    </div>
+
     
     <div class = 'container'>
         
