Created toggable button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id = "buttonMenu">
         <button id="sizeOfGrid" onclick="gridResizePrompt()">Click Here to Change the Size of the Grid</button>
 
-        <button id="randomizeColorMode" onclick="randomColorMode()">Random Color Mode</button>
+        <button id="randomizeColorMode" onclick="randomColorMode()">Random Color Mode : OFF</button>
     </div>
 
     
