Completed the programming necessary, ready for graphical improvements

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <button id="sizeOfGrid" onclick="gridResizePrompt()">Click Here to Change the Size of the Grid</button>
 
         <button id="randomizeColorMode" onclick="randomColorMode()">Random Color Mode : OFF</button>
+
+        <button id="progressiveDarkMode" onclick="proDarkMode()">Progressively Darker Mode : OFF</button>
     </div>
 
     
