Created a reset button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <button id="randomizeColorMode" onclick="randomColorMode()">Random Color Mode : OFF</button>
 
         <button id="progressiveDarkMode" onclick="proDarkMode()">Progressively Darker Mode : OFF</button>
+
+        <button id="resetButton" onclick="resetMode()">Click Here to Shake the Etch-a-Sketch</button>
     </div>
 
     
